--- a/stellar/attendence/index.html
+++ b/stellar/attendence/index.html
@@ -20,7 +20,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">
-      <img src="../assets/logo_img.jpg" alt="Logo" class="animated-logo">
+      <img src="../assets/tlogo.png" alt="Logo" class="animated-logo">
       <span>Attendance Portal</span>
     </div>
     <div class="menu-toggle" id="mobile-menu"><i class="fas fa-bars"></i></div>
@@ -70,8 +70,10 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-content">
-      <p>© 2025 Stellar Mind | NIT Sikkim</p>
-      <p>📞 Contact: <a href="tel:+918769681167">+91 98765 43210</a></p>
+      <p>© 2025 Stellar Mind | NIT Sikkim
+        Logo credit Tarun Roll 64 
+      </p>
+      <p>📞 Contact: <a href="tel:+918769681167">Click to Call</a></p>
       <div class="social-icons">
         <a href="https://wa.me/7037796470" target="_blank"><i class="fab fa-whatsapp"></i></a>
         <a href="https://instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
