--- a/stellar/login/index.html
+++ b/stellar/login/index.html
@@ -14,8 +14,9 @@
   <div class="login-container">
     <!-- Glowing Logo -->
     <div class="logo">
-      <img src="/assets/logo_img.jpg" alt="Stellar Mind Logo">
+      <img src="/assets/tlogo.png" alt="Stellar Mind Logo">
     </div>
+    
 
     <h1><i class="fa-solid fa-user-secret"></i> Welcome Back</h1>
     <p class="subtitle">Login to explore your Stellar Mind</p>
