--- a/stellar/terms/index.html
+++ b/stellar/terms/index.html
@@ -11,7 +11,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">
-      <img src="/assets/logo_img.jpg" alt="Stellar Mind Logo" class="animated-logo">
+      <img src="/assets/tlogo.png" alt="Stellar Mind Logo" class="animated-logo">
       <span>Stellar Mind</span>
     </div>
 
