--- a/stellar/index.html
+++ b/stellar/index.html
@@ -16,7 +16,6 @@
       <img src="assets/tlogo.png" alt="Stellar Mind Logo" class="animated-logo">
       <span>Stellar Mind</span>
     </div>
-
     <div class="menu-toggle" id="mobile-menu">
       <i class="fas fa-bars"></i>
     </div>
@@ -26,8 +25,10 @@
       <li><a href="attendence/index.html" id="attendance-link"><i class="fas fa-user-check"></i> Attendance</a></li>
       <li><a href="/ai/index.html"><i class="fas fa-robot"></i> AI HELPER</a></li>
       <li><a href="terms/index.html"><i class="fas fa-file-contract"></i> Terms</a></li>
+      <li id="marks-link"><a href="#"><i class="fas fa-clipboard"></i> Marks</a></li>
       <li id="auth-btn"><a href="login/index.html"><i class="fas fa-user"></i> Login</a></li>
     </ul>
+
   </nav>
 
   <!-- Hero Section -->
@@ -41,7 +42,7 @@
         Stellar Mind is a community-driven club where innovation meets creativity.
         We explore cutting-edge technology, design, and ideas to inspire the next generation of thinkers and creators.
       </p>
-      <a href="https://wa.me/7037796470" class="btn">Join Us</a>
+      <a href="/terms/index.html" class="btn">About Us</a>
     </div>
 
     <div class="spline-card">
@@ -80,10 +81,15 @@
       <h3><i class="fa-solid fa-lightbulb"></i> Important Links</h3>
       <div class="justify">
         <ul>
-          <li><a href="https://kic.nitsikkim.ac.in/downloads/Gate%20Pass%202%20(1).pdf"><i class="fas fa-user-check"></i> Gate Pass</a></li>
-          <li><a href="https://nitsikkim.samarth.edu.in/index.php/site/login"><i class="fas fa-user-check"></i> Samarth Portal</a></li>
-          <li><a href="https://nitsikkim.ac.in/documents/downloads/Proforma_Form%20for%20Issuing%20Certificate_English.pdf"><i class="fas fa-user-check"></i> Academic Document</a></li>
-          <li><a href="https://nitsikkim.ac.in/students/academicCalendar.php"><i class="fas fa-user-check"></i> Academic Calendar</a></li>
+          <li><a href="https://kic.nitsikkim.ac.in/downloads/Gate%20Pass%202%20(1).pdf"><i
+                class="fas fa-user-check"></i> Gate Pass</a></li>
+          <li><a href="https://nitsikkim.samarth.edu.in/index.php/site/login"><i class="fas fa-user-check"></i> Samarth
+              Portal</a></li>
+          <li><a
+              href="https://nitsikkim.ac.in/documents/downloads/Proforma_Form%20for%20Issuing%20Certificate_English.pdf"><i
+                class="fas fa-user-check"></i> Academic Document</a></li>
+          <li><a href="https://nitsikkim.ac.in/students/academicCalendar.php"><i class="fas fa-user-check"></i> Academic
+              Calendar</a></li>
         </ul>
       </div>
     </div>
