--- a/stellar/login/signup.html
+++ b/stellar/login/signup.html
@@ -187,7 +187,7 @@
       <p class="example-text">e.g., b240002</p>
       <div class="input-group">
         <i class="fas fa-id-card"></i>
-        <input type="text" id="rollno" placeholder="Institute Roll Number" required>
+        <input type="text" id="rollno" placeholder="Institute Roll Number" maxlength="7" required>
       </div>
 
       <div class="input-group">
@@ -223,7 +223,7 @@
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
 
-      const rollno = document.getElementById('rollno').value.trim();
+      const rollno = document.getElementById('rollno').value.trim().toLowerCase();
       const name = document.getElementById('name').value.trim();
 
       if (!rollno || !name) {
