--- a/stellar/login/index.html
+++ b/stellar/login/index.html
@@ -46,7 +46,7 @@
 //   });
 //   </script>
 
-//   <script>
+  <script>
 //   // Disable some keys (F12, Ctrl+Shift+I, Ctrl+U, etc.)
 //   document.addEventListener("keydown", (e) => {
 //     if (
