--- a/stellar/tsprofile/index.html
+++ b/stellar/tsprofile/index.html
@@ -98,7 +98,7 @@
         <!-- Input and Button -->
         <div class="flex flex-col md:flex-row gap-4 mb-6">
             <input type="text" id="usernameInput" placeholder="Enter username (e.g., b240001)"
-                   class="flex-grow p-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-300">
+                    class="flex-grow p-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-300">
             <button id="fetchButton"
                     class="bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 transition duration-300">
                 Search
@@ -217,7 +217,7 @@
                 marksArea.innerHTML = `<div class="uploading-soon">No records found for <strong>${examType}</strong>.</div>`;
                 return;
             }
-
+            
             const table = document.createElement('table');
             table.className = 'marks-table';
             table.innerHTML = `
@@ -233,6 +233,9 @@
             `;
 
             const tbody = table.querySelector('tbody');
+            // Calculate total marks and total max marks
+            let totalGainedMarks = 0;
+            let totalMaxMarks = 0;
             data.forEach(row => {
                 const tr = document.createElement('tr');
                 tr.innerHTML = `
@@ -242,10 +245,18 @@
                     <td>${row.max_marks ?? '-'}</td>
                 `;
                 tbody.appendChild(tr);
+                totalGainedMarks += Number(row.marks) || 0;
+                totalMaxMarks += Number(row.max_marks) || 0;
             });
 
+            // Create a summary element
+            const summaryDiv = document.createElement('div');
+            summaryDiv.className = 'text-center text-lg font-bold mt-4 p-4 rounded-lg bg-blue-50 text-blue-800';
+            summaryDiv.innerHTML = `Total Marks: <span class="text-xl font-extrabold">${totalGainedMarks} / ${totalMaxMarks}</span>`;
+
             marksArea.innerHTML = '';
-            marksArea.appendChild(table);
+            marksArea.appendChild(table); // Add the table first
+            marksArea.appendChild(summaryDiv); // Then add the summary
         }
 
         // Event listener for the "Search" button
