--- a/stellar/index.html
+++ b/stellar/index.html
@@ -942,48 +942,44 @@
     // =============================
     const timetable = {
       MON: [
-        "08:30 - 09:30 → AI13103 (ECE Faculty) Shed III",
-        "09:30 - 10:30 → AI13105 (RS) Shed III",
-        "10:30 - 11:30 → AI13101 (LA) Shed III",
-        "11:30 - 12:30 → BREAK",
-        "12:30 - 01:30 → AI13203 (ECE Faculty) ECE Lab",
-        "02:00 - 03:00 → AI13201 (LA/AKT/BBS) CL-4",
+        "09:30 - 10:30 → CS13113 (ECE Faculty) Shed III",
+        "10:30 - 11:30 → CS13115 (RS) Shed III",
+        "11:30 - 12:30 → CS13111 (LA) Shed III",
+        "12:30 - 14:00 → BREAK",
+        "14:00 - 16:00 → CS13211 (LA/AKT/BBS) CL-4",
       ],
       TUE: [
-        "08:30 - 09:30 → AI13102 (ALM) Shed III",
-        "09:30 - 10:30 → AI13101 (LA) Shed III",
-        "10:30 - 11:30 → AI13201 (LA/AKT/BBS) CL-4",
+        "09:30 - 10:30 → CS13112 (ALM) Shed III",
+        "10:30 - 11:30 → CS13111 (LA) Shed III",
         "11:30 - 12:30 → BREAK",
-        "12:30 - 01:30 → AI13103 (ECE Faculty) Shed III",
-        "02:00 - 03:00 → AI13203 (ECE Faculty) ECE Lab",
+        "12:30 - 13:30 → CS13113 (ECE Faculty) Shed III",
+        "14:00 - 16:00 → CS13213 (ECE Faculty) ECE Lab",
       ],
       WED: [
-        "08:30 - 09:30 → AI13102 (ALM) Shed III",
-        "09:30 - 10:30 → AI13106 (BBS) Shed III",
-        "10:30 - 11:30 → AI13105 (RS) Shed III",
+        "09:30 - 10:30 → CS13112 (ALM) Shed III",
+        "10:30 - 11:30 → CS13116 (BBS) Shed III",
         "11:30 - 12:30 → BREAK",
-        "12:30 - 01:30 → AI13104 (PKK) Shed III",
-        "02:00 - 03:00 → AI13103 (ECE Faculty) Shed III",
-        "03:00 - 04:00 → AI13203 (ECE Faculty) ECE Lab",
+        "12:30 - 13:30 → CS13114 (PKK) Shed III",
+        "14:00 - 15:00 → CS13115 (RS) Shed III",
+        "15:00 - 17:00 → CS13213 (ECE Faculty) ECE Lab",
       ],
       THU: [
         "08:30 - 09:30 → ZZ13201 (BBS) Shed III",
-        "09:30 - 10:30 → AI13105 (RS) Shed III",
-        "10:30 - 11:30 → AI13102 (ALM) Shed III",
-        "11:30 - 12:30 → AI13202 (ALM) CL-4",
-        "12:30 - 01:30 → BREAK",
-        "01:30 - 02:30 → AI13104 (PKK) Shed III",
-        "02:30 - 03:30 → AI13203 (ECE Faculty) ECE Lab",
+        "09:30 - 10:30 → CS13115 (RS) Shed III",
+        "10:30 - 11:30 → CS13112 (ALM) Shed III",
+        "11:30 - 12:30 → CS13212 (ALM) CL-4",
+        "12:30 - 13:30 → BREAK",
+        "13:30 - 14:30 → CS13114 (PKK) Shed III",
+        "14:30 - 16:30 → CS13213 (ECE Faculty) ECE Lab",
       ],
       FRI: [
         "08:30 - 09:30 → ZZ13201 (BBS) Shed III",
-        "09:30 - 10:30 → AI13102 (ALM) Shed III",
-        "10:30 - 11:30 → AI13106 (BBS) Shed III",
-        "11:30 - 12:30 → AI13106 (BBS) Shed III",
-        "12:30 - 01:30 → BREAK",
-        "01:30 - 02:30 → AI13104 (PKK) Shed III",
-        "02:30 - 03:30 → AI13101 (LA) Shed III",
-        "03:30 - 04:30 → AI13204 (PKK) CL-3",
+        "09:30 - 10:30 → CS13112 (ALM) Shed III",
+        "10:30 - 12:30 → CS13116 (BBS) Shed III",
+        "12:30 - 13:30 → BREAK",
+        "13:30 - 14:30 → CS13114 (PKK) Shed III",
+        "14:30 - 15:30 → CS13111 (LA) Shed III",
+        "15:30 - 16:30 → CS13214 (PKK) CL-3",
       ],
     };
 
