--- a/stellar/tsprofile/index.html
+++ b/stellar/tsprofile/index.html
@@ -369,16 +369,16 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo">
-            <img src="assets/tlogo.png" alt="Stellar Mind Logo" class="animated-logo">
+            <img src="/assets/tlogo.png" alt="Stellar Mind Logo" class="animated-logo">
             <span>Stellar Mind</span>
         </div>
         <div class="menu-toggle" id="mobile-menu">
             <i class="fas fa-bars"></i>
         </div>
         <ul class="nav-links" id="nav-links">
-            <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="/marks/index.html"><i class="fas fa-clipboard"></i> Marks</a></li>
-            <li><a href="/attendence/index.html"><i class="fas fa-user-check"></i> Attendance</a></li>
+            <li><a href="/index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="/teachermarks/index.html"><i class="fas fa-clipboard"></i> Marks</a></li>
+            <li><a href="/teacher/index.html"><i class="fas fa-user-check"></i> Attendance</a></li>
             <li><a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
         </ul>
     </nav>
@@ -667,4 +667,3 @@
     </script>
 </body>
 </html>
-
