--- a/stellar/login/index.html
+++ b/stellar/login/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
-  <div class="bg-animation"></div>
 
   <div class="login-container">
     <div class="logo">
@@ -31,43 +30,46 @@
 
       <button type="submit" class="btn">Login</button>
       <p id="login-message"></p>
-
-      <p class="signup-link">
-        Not registered yet? <a href="signup.html">Sign Up</a>
-      </p>
     </form>
+
+    <p class="signup-link">
+      Not registered yet? <a href="signup.html">Sign Up</a>
+    </p>
+
+    <a href="../teacher_signup/teacher.html" class="btn btn-secondary">Sign up as a Teacher</a>
+
   </div>
 
   <script>
-//   // Disable right click
-//   document.addEventListener("contextmenu", (e) => {
-//     e.preventDefault();
-//     alert("Inspect is disabled on this site 🚫");
-//   });
-//   </script>
+    //   // Disable right click
+    //   document.addEventListener("contextmenu", (e) => {
+    //     e.preventDefault();
+    //     alert("Inspect is disabled on this site 🚫");
+    //   });
+  </script>
 
   <script>
-//   // Disable some keys (F12, Ctrl+Shift+I, Ctrl+U, etc.)
-//   document.addEventListener("keydown", (e) => {
-//     if (
-//       e.key === "F12" || 
-//       (e.ctrlKey && e.shiftKey && e.key === "I") ||
-//       (e.ctrlKey && e.shiftKey && e.key === "J") ||
-//       (e.ctrlKey && e.key === "U") ||
-//       (e.ctrlKey && e.key === "S")
-//     ) {
-//       e.preventDefault();
-//       alert("Developer tools are disabled 🚫");
-//     }
-//   });
+    //   // Disable some keys (F12, Ctrl+Shift+I, Ctrl+U, etc.)
+    //   document.addEventListener("keydown", (e) => {
+    //     if (
+    //       e.key === "F12" || 
+    //       (e.ctrlKey && e.shiftKey && e.key === "I") ||
+    //       (e.ctrlKey && e.shiftKey && e.key === "J") ||
+    //       (e.ctrlKey && e.key === "U") ||
+    //       (e.ctrlKey && e.key === "S")
+    //     ) {
+    //       e.preventDefault();
+    //       alert("Developer tools are disabled 🚫");
+    //     }
+    //   });
 
-//   // Try to detect DevTools opening
-//   setInterval(() => {
-//     if (window.devtools && window.devtools.open) {
-//       alert("DevTools is open!");
-//       window.location.reload();
-//     }
-//   }, 1000);
+    //   // Try to detect DevTools opening
+    //   setInterval(() => {
+    //     if (window.devtools && window.devtools.open) {
+    //       alert("DevTools is open!");
+    //       window.location.reload();
+    //     }
+    //   }, 1000);
   </script>
 
   <script type="module" src="script.js"></script>
